name:              spllerE
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable spllerE
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base,HTTP,containers,text,pureMD5,bytestring
  ghc-options:     -Wall -O2 -fno-warn-unused-do-bind

Test-Suite Test
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  hs-source-dirs:  src/test,src
  build-depends:    base,HUnit,test-framework,test-framework-hunit,text,containers
  ghc-options:     -Wall -O2 -fno-warn-unused-do-bind